--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
     "react-scripts": "3.4.3",
+    "react-typical": "^0.1.3",
     "uuid": "^8.3.0"
   },
   "scripts": {
